# django-migration-conflict-check

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: handler.py
